<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--        android:orderInCategory="100"-->
    <item
        android:id="@+id/delete_menu_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_menu_item"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_reminder_menu_item"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/add_reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_tag_menu_item"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/tag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_md_menu_item"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/add_md"
        app:showAsAction="ifRoom">
            <!-- "md" submenu -->
            <menu>
                <item   android:id="@+id/header"
                        android:title="@string/lorem_ipsum" />
                <item   android:id="@+id/open"
                        android:title="@string/lorem_ipsum_para" />
            </menu>
    </item>
    <item
        android:id="@+id/show_md_menu_item"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/show_md"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_menu_item"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_note"
        android:orderInCategory="0"
        app:showAsAction="always" />
</menu>